--- a/sources/Sample.Avalonia/App.axaml
+++ b/sources/Sample.Avalonia/App.axaml
@@ -1,8 +1,10 @@
-﻿<Application xmlns="https://github.com/avaloniaui"
+﻿<Application x:Class="Sample.Avalonia.App"
+             xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="Sample.Avalonia.App"
              RequestedThemeVariant="Default">
+
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
+
 </Application>
