--- a/sources/Sample.Avalonia/MainWindow.axaml
+++ b/sources/Sample.Avalonia/MainWindow.axaml
@@ -1,13 +1,15 @@
-﻿<Window xmlns="https://github.com/avaloniaui"
-		xmlns:avalonia="using:Zenith.NET.Views.Avalonia"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:local="clr-namespace:Sample.Avalonia"
-		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-		x:Class="Sample.Avalonia.MainWindow"
-		Title="Sample.Avalonia">
+﻿<Window x:Class="Sample.Avalonia.MainWindow"
+        xmlns="https://github.com/avaloniaui"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:avalonia="using:Zenith.NET.Views.Avalonia"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:local="clr-namespace:Sample.Avalonia"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="Sample.Avalonia"
+        d:DesignHeight="450"
+        d:DesignWidth="800"
+        mc:Ignorable="d">
 
-	<avalonia:ZenithView GraphicsContext="{x:Static local:App.Context}" />
+    <avalonia:ZenithView GraphicsContext="{x:Static local:App.Context}" />
 
 </Window>
