--- a/sources/Sample.Avalonia/MainWindow.axaml
+++ b/sources/Sample.Avalonia/MainWindow.axaml
@@ -5,11 +5,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Sample.Avalonia"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:Sample.Avalonia.Views"
         Title="Sample.Avalonia"
         d:DesignHeight="450"
         d:DesignWidth="800"
         mc:Ignorable="d">
 
-    <avalonia:ZenithView GraphicsContext="{x:Static local:App.Context}" />
+    <views:MainView />
 
 </Window>
