--- a/sources/Sample.WPF/Views/MainView.xaml
+++ b/sources/Sample.WPF/Views/MainView.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Sample.WPF"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:sample="clr-namespace:Sample;assembly=Sample"
       xmlns:vm="clr-namespace:Sample.WPF.ViewModels"
       xmlns:zenith="clr-namespace:Zenith.NET.Views.WPF;assembly=Zenith.NET.Views.WPF"
       Title="MainView"
@@ -19,17 +20,18 @@
     <Grid>
         <zenith:ZenithView GraphicsContext="{x:Static local:App.Context}">
             <b:Interaction.Triggers>
-                <b:EventTrigger EventName="UpdateRequested">
-                    <b:InvokeCommandAction Command="{Binding UpdateCommand}"
-                                           PassEventArgsToCommand="True" />
-                </b:EventTrigger>
-
                 <b:EventTrigger EventName="RenderRequested">
                     <b:InvokeCommandAction Command="{Binding RenderCommand}"
                                            PassEventArgsToCommand="True" />
                 </b:EventTrigger>
             </b:Interaction.Triggers>
         </zenith:ZenithView>
+
+        <ComboBox Margin="10"
+                  HorizontalAlignment="Right"
+                  VerticalAlignment="Top"
+                  ItemsSource="{x:Static sample:Renderer.Samples}"
+                  SelectedItem="{Binding Sample}" />
     </Grid>
 
 </Page>
