Refactor rendering and replace AppShell with MainView
Refactored `App.xaml.cs` to integrate a platform-specific `GraphicsContext` for Vulkan (Android) and Metal (iOS/macOS) rendering. Replaced `AppShell` and `MainPage` with `MainView` as the primary view, introducing `MainViewModel` for state management and rendering logic using `CommunityToolkit.Mvvm`.

Updated `MauiProgram.cs` to include `ZenithView` and modified `Sample.Maui.csproj` to add new dependencies (`Zenith.NET.Vulkan`, `CommunityToolkit.Mvvm`). Enhanced WinUI `MainView` with updated event handling and dynamic size adjustments.

Performed general cleanup, removing unused files and aligning namespaces.

--- a/sources/Sample.WinUI/Views/MainView.xaml
+++ b/sources/Sample.WinUI/Views/MainView.xaml
@@ -1,7 +1,7 @@
 ﻿<Page x:Class="Sample.WinUI.Views.MainView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:b="using:Microsoft.Xaml.Interactivity"
+      xmlns:i="using:Microsoft.Xaml.Interactivity"
       xmlns:local="using:Sample.WinUI"
       xmlns:sample="using:Sample"
       xmlns:viewmodels="using:Sample.WinUI.ViewModels"
@@ -13,11 +13,11 @@
 
     <Grid>
         <zenith:ZenithView GraphicsContext="{x:Bind local:App.Context}">
-            <b:Interaction.Behaviors>
-                <b:EventTriggerBehavior EventName="RenderRequested">
-                    <b:InvokeCommandAction Command="{Binding RenderCommand}" />
-                </b:EventTriggerBehavior>
-            </b:Interaction.Behaviors>
+            <i:Interaction.Behaviors>
+                <i:EventTriggerBehavior EventName="RenderRequested">
+                    <i:InvokeCommandAction Command="{Binding RenderCommand}" />
+                </i:EventTriggerBehavior>
+            </i:Interaction.Behaviors>
         </zenith:ZenithView>
 
         <ComboBox Margin="10"
