Integrate CommunityToolkit.Maui into the project
Added the `CommunityToolkit.Maui` package to the project and
updated `Directory.Packages.props`, `Sample.Maui.csproj`, and
`MauiProgram.cs` to enable its usage. Modified `MainView.xaml`
to include an `EventToCommandBehavior` for binding the
`RenderRequested` event to the `RenderCommand` in the view model.

--- a/sources/Sample.Maui/Views/MainView.xaml
+++ b/sources/Sample.Maui/Views/MainView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="using:Sample.Maui"
              xmlns:sample="clr-namespace:Sample;assembly=Sample"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:viewmodels="using:Sample.Maui.ViewModels"
              xmlns:zenith="clr-namespace:Zenith.NET.Views.Maui;assembly=Zenith.NET.Views.Maui"
              Title="MainView">
@@ -12,7 +13,12 @@
     </ContentPage.BindingContext>
 
     <Grid>
-        <zenith:ZenithView GraphicsContext="{x:Static local:App.Context}" />
+        <zenith:ZenithView GraphicsContext="{x:Static local:App.Context}">
+            <zenith:ZenithView.Behaviors>
+                <toolkit:EventToCommandBehavior Command="{Binding RenderCommand}"
+                                                EventName="RenderRequested" />
+            </zenith:ZenithView.Behaviors>
+        </zenith:ZenithView>
 
         <Picker Margin="10"
                 HorizontalOptions="End"
