Set SafeAreaEdges to None in MainView.xaml Grid
Modified the `<Grid>` element in `MainView.xaml` to include the
`SafeAreaEdges="None"` attribute. This prevents automatic
adjustments for safe area insets, allowing for a more custom
layout and consistent design across devices.

--- a/sources/Sample.Maui/Views/MainView.xaml
+++ b/sources/Sample.Maui/Views/MainView.xaml
@@ -14,7 +14,7 @@
         <viewmodels:MainViewModel />
     </ContentPage.BindingContext>
 
-    <Grid>
+    <Grid SafeAreaEdges="None">
         <zenithmaui:ZenithView GraphicsContext="{x:Static local:App.Context}">
             <zenithmaui:ZenithView.Behaviors>
                 <toolkit:EventToCommandBehavior x:DataType="viewmodels:MainViewModel "
