Refactor graphics context management to Renderer
Centralize creation and management of GraphicsContext in the Renderer class using platform detection. Remove platform-specific context handling from App classes and update all XAML/code-behind to use Renderer.Context. Move backend project references to the shared Sample project and clean up platform .csproj files. This simplifies backend selection and improves maintainability across all sample platforms.

--- a/sources/Sample.Avalonia/Views/MainView.axaml
+++ b/sources/Sample.Avalonia/Views/MainView.axaml
@@ -2,9 +2,8 @@
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="using:Sample.Avalonia"
-             xmlns:sample="using:Sample"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:sample="using:Sample"
              xmlns:viewmodels="using:Sample.Avalonia.ViewModels"
              xmlns:zenith="using:Zenith.NET.Views.Avalonia"
              d:DesignHeight="450"
@@ -17,7 +16,7 @@
     </UserControl.DataContext>
 
     <Grid>
-        <zenith:ZenithView GraphicsContext="{x:Static local:App.Context}">
+        <zenith:ZenithView GraphicsContext="{x:Static sample:Renderer.Context}">
             <Interaction.Behaviors>
                 <EventTrigger EventName="RenderRequested">
                     <InvokeCommandAction Command="{Binding RenderCommand}"
