--- a/sources/Sample.Maui/Views/MainView.xaml
+++ b/sources/Sample.Maui/Views/MainView.xaml
@@ -1,7 +1,6 @@
 ﻿<ContentPage x:Class="Sample.Maui.Views.MainView"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="using:Sample.Maui"
              xmlns:sample="clr-namespace:Sample;assembly=Sample"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:viewmodels="using:Sample.Maui.ViewModels"
@@ -15,7 +14,7 @@
     </ContentPage.BindingContext>
 
     <Grid SafeAreaEdges="None">
-        <zenithmaui:ZenithView GraphicsContext="{x:Static local:App.Context}">
+        <zenithmaui:ZenithView GraphicsContext="{x:Static sample:Renderer.Context}">
             <zenithmaui:ZenithView.Behaviors>
                 <toolkit:EventToCommandBehavior x:DataType="viewmodels:MainViewModel "
                                                 x:TypeArguments="zenith:RenderEventArgs"
