--- a/sources/Sample.WPF/Views/MainView.xaml
+++ b/sources/Sample.WPF/Views/MainView.xaml
@@ -17,11 +17,12 @@
     </Page.DataContext>
 
     <Grid>
-        <zenith:ZenithView GraphicsContext="{x:Static sample:Renderer.Context}">
+        <zenith:ZenithView x:Name="ZenithView"
+                           GraphicsContext="{x:Static sample:Renderer.Context}">
             <b:Interaction.Triggers>
-                <b:EventTrigger EventName="RenderRequested">
-                    <b:InvokeCommandAction Command="{Binding RenderCommand}"
-                                           PassEventArgsToCommand="True" />
+                <b:EventTrigger EventName="Loaded">
+                    <b:InvokeCommandAction Command="{Binding LoadedCommand}"
+                                           CommandParameter="{Binding ElementName=ZenithView}" />
                 </b:EventTrigger>
             </b:Interaction.Triggers>
         </zenith:ZenithView>
