Switch to ProjectReference for Zenith.NET.Views.WinUI
Replaced NuGet package with direct project reference for Zenith.NET.Views.WinUI in Sample.Uno and Sample.WinUI. Refactored event handling in MainViewModel to subscribe to RenderRequested on view Loaded, improving event management. Updated XAML to trigger LoadedCommand instead of RenderRequested, and adjusted Renderer initialization to use ZenithViewOutputs. These changes streamline local development and prevent duplicate event handlers.

--- a/sources/Sample.Uno/Views/MainView.xaml
+++ b/sources/Sample.Uno/Views/MainView.xaml
@@ -11,10 +11,12 @@
     </Page.DataContext>
 
     <Grid>
-        <zenith:ZenithView GraphicsContext="{x:Bind sample:Renderer.Context}">
+        <zenith:ZenithView x:Name="ZenithView"
+                           GraphicsContext="{x:Bind sample:Renderer.Context}">
             <i:Interaction.Behaviors>
-                <i:EventTriggerBehavior EventName="RenderRequested">
-                    <i:InvokeCommandAction Command="{Binding RenderCommand}" />
+                <i:EventTriggerBehavior EventName="Loaded">
+                    <i:InvokeCommandAction Command="{Binding LoadedCommand}"
+                                           CommandParameter="{x:Bind ZenithView}" />
                 </i:EventTriggerBehavior>
             </i:Interaction.Behaviors>
         </zenith:ZenithView>
