Refactor ZenithView usage and event handling across platforms
Switch to direct project reference for Zenith.NET.Views.Avalonia in Sample.Avalonia. Refactor Avalonia rendering event handling to use a Loaded event and code-behind subscription. Update all platform entry points to use ZenithView.Output for Renderer initialization, replacing platform-specific outputs. Standardize using directives for platform-specific Zenith.NET.Views namespaces. These changes simplify initialization and event handling across all samples.

--- a/sources/Sample.Avalonia/Views/MainView.axaml
+++ b/sources/Sample.Avalonia/Views/MainView.axaml
@@ -16,11 +16,12 @@
     </UserControl.DataContext>
 
     <Grid>
-        <zenith:ZenithView GraphicsContext="{x:Static sample:Renderer.Context}">
+        <zenith:ZenithView x:Name="ZenithView"
+                           GraphicsContext="{x:Static sample:Renderer.Context}">
             <Interaction.Behaviors>
-                <EventTrigger EventName="RenderRequested">
-                    <InvokeCommandAction Command="{Binding RenderCommand}"
-                                         PassEventArgsToCommand="True" />
+                <EventTrigger EventName="Loaded">
+                    <InvokeCommandAction Command="{Binding LoadedCommand}"
+                                         CommandParameter="{Binding ElementName=ZenithView}" />
                 </EventTrigger>
             </Interaction.Behaviors>
         </zenith:ZenithView>
