--- a/sources/Sample.WPF/Views/MainView.xaml
+++ b/sources/Sample.WPF/Views/MainView.xaml
@@ -1,7 +1,6 @@
 ﻿<Page x:Class="Sample.WPF.Views.MainView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:sample="clr-namespace:Sample;assembly=Sample"
@@ -17,15 +16,8 @@
     </Page.DataContext>
 
     <Grid>
-        <zenith:ZenithView x:Name="ZenithView"
-                           GraphicsContext="{x:Static sample:Renderer.Context}">
-            <b:Interaction.Triggers>
-                <b:EventTrigger EventName="Loaded">
-                    <b:InvokeCommandAction Command="{Binding LoadedCommand}"
-                                           CommandParameter="{Binding ElementName=ZenithView}" />
-                </b:EventTrigger>
-            </b:Interaction.Triggers>
-        </zenith:ZenithView>
+        <zenith:ZenithView GraphicsContext="{x:Static sample:Renderer.Context}"
+                           RenderRequested="OnRenderRequested" />
 
         <ComboBox Margin="10"
                   HorizontalAlignment="Right"
