Refactor event handling; remove Xaml.Behaviors.Avalonia
Simplifies event handling by removing Xaml.Behaviors.Avalonia package and related behavior-based triggers. Replaces Loaded event and command invocation with direct RenderRequested event wiring in code-behind. Removes ActualWidth and ActualHeight properties and their update logic from both Avalonia and Maui view models and views. Streamlines rendering logic and reduces code complexity.

--- a/sources/Sample.Avalonia/Views/MainView.axaml
+++ b/sources/Sample.Avalonia/Views/MainView.axaml
@@ -16,15 +16,8 @@
     </UserControl.DataContext>
 
     <Grid>
-        <zenith:ZenithView x:Name="ZenithView"
-                           GraphicsContext="{x:Static sample:Renderer.Context}">
-            <Interaction.Behaviors>
-                <EventTrigger EventName="Loaded">
-                    <InvokeCommandAction Command="{Binding LoadedCommand}"
-                                         CommandParameter="{Binding ElementName=ZenithView}" />
-                </EventTrigger>
-            </Interaction.Behaviors>
-        </zenith:ZenithView>
+        <zenith:ZenithView GraphicsContext="{x:Static sample:Renderer.Context}"
+                           RenderRequested="OnRenderRequested" />
 
         <ComboBox Margin="10"
                   HorizontalAlignment="Right"
