Refactor RenderRequested event to use MVVM commands
Replaced direct event handlers with RelayCommand in MainViewModel and updated XAML to use behaviors/triggers for event-to-command binding across Avalonia, WPF, WinUI, Uno, WinForms, and MAUI samples. Added necessary behavior packages, removed code-behind handlers, and improved MVVM compliance and maintainability.

--- a/sources/Sample.Avalonia/Views/MainView.axaml
+++ b/sources/Sample.Avalonia/Views/MainView.axaml
@@ -16,8 +16,14 @@
     </UserControl.DataContext>
 
     <Grid>
-        <zenith:ZenithView GraphicsContext="{x:Static sample:Renderer.Context}"
-                           RenderRequested="OnRenderRequested" />
+        <zenith:ZenithView GraphicsContext="{x:Static sample:Renderer.Context}">
+            <Interaction.Behaviors>
+                <EventTrigger EventName="RenderRequested">
+                    <InvokeCommandAction Command="{Binding RenderRequestedCommand}"
+                                         PassEventArgsToCommand="True" />
+                </EventTrigger>
+            </Interaction.Behaviors>
+        </zenith:ZenithView>
 
         <ComboBox Margin="10"
                   HorizontalAlignment="Right"
