Enable two-way ComboBox binding; add CornellBox shader
Updated ComboBox SelectedItem to use two-way binding in MainView.xaml for proper ViewModel synchronization. Added CornellBox.slang shader with basic setup and a red output pixel shader.

--- a/sources/Sample.Uno/Views/MainView.xaml
+++ b/sources/Sample.Uno/Views/MainView.xaml
@@ -12,7 +12,7 @@
                   HorizontalAlignment="Right"
                   VerticalAlignment="Top"
                   ItemsSource="{x:Bind sample:Renderer.Samples}"
-                  SelectedItem="{x:Bind ViewModel.Sample}" />
+                  SelectedItem="{x:Bind ViewModel.Sample, Mode=TwoWay}" />
     </Grid>
 
 </Page>
