--- a/sources/Sample.WinUI/Views/MainView.xaml
+++ b/sources/Sample.WinUI/Views/MainView.xaml
@@ -12,7 +12,7 @@
                   HorizontalAlignment="Right"
                   VerticalAlignment="Top"
                   ItemsSource="{x:Bind sample:Renderer.Samples}"
-                  SelectedItem="{x:Bind ViewModel.Sample}" />
+                  SelectedItem="{x:Bind ViewModel.Sample, Mode=TwoWay}" />
     </Grid>
 
 </Page>
